--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "grunt": "^0.4.1",
+    "grunt-cli": "^1.2.0",
     "grunt-http-server": "^2.0.0"
   }
 }
