--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "angular-leaflet-directive": "^0.10.0",
     "grunt": "^0.4.1",
     "grunt-cli": "^1.2.0",
-    "grunt-http-server": "^2.0.0"
+    "grunt-http-server": "^2.0.0",
+    "leaflet": "^0.7.7",
+    "leaflet-routing-machine": "^3.0.3"
   }
 }
