--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-http-server": "^2.0.0",
     "leaflet": "^0.7.7",
-    "leaflet-routing-machine": "^3.0.3"
+    "leaflet-routing-machine": "^3.0.3",
+    "ui-leaflet": "^1.0.1"
   }
 }
